new  index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="../users.atw.hu/css/styleQuick.css">
+    <title>Introduction</title>
 </head>
 <body>
-    <h1>
-        Tesztgit
-    </h1>
+    <center>
+        <div class="row">
+            <div class="col">
+                <div class="middleBox">
+                    <video controls>
+                        <source src="../videos/quickHelp.mp4" type="video/mp4">
+                      </video>
+                </div>
+                <p></p>
+                <div class="middleBox">
+                    <H3>Rólunk:
+                        <p>
+                            psjpjthopstjhopjopsrtrjmthmksrthmksrth
+                            srthmsrthmksrthm,srthm,rth,
+                            srthmsrths,
+                            srth,srth,srth,srth,srt,hsrthnrthnsrthn
+                            srtnhsrthnsrthnsrt
+                            hnsrtnhsrthnsrthmsrt
+                            msrthnsrthnsrthnrth
+                            psjpjthopstjhopjopsrtrjmthmksrthmksrth
+                            srthmsrthmksrthm,srthm,rth,
+                            srthmsrths,
+                            srth,srth,srth,srth,srt,hsrthnrthnsrthn
+                            srtnhsrthnsrthnsrt
+                            hnsrtnhsrthnsrthmsrt
+                            msrthnsrthnsrthnrthpsjpjthopstjhopjopsrtrjmthmksrthmksrth
+                            srthmsrthmksrthm,srthm,rth,
+                            srthmsrths,
+                            srth,srth,srth,srth,srt,hsrthnrthnsrthn
+                            srtnhsrthnsrthnsrt
+                            hnsrtnhsrthnsrthmsrt
+                            msrthnsrthnsrthnrthpsjpjthopstjhopjopsrtrjmthmksrthmksrth
+                            srthmsrthmksrthm,srthm,rth,
+                            srthmsrths,
+                            srth,srth,srth,srth,srt,hsrthnrthnsrthn
+                            srtnhsrthnsrthnsrt
+                            hnsrtnhsrthnsrthmsrt
+                            msrthnsrthnsrthnrth
+                        </p>
+                    </H3>
+                </div>
+            </div>
+            <div class="col">
+              2 of 2
+            </div>
+          </div>
+    </center>
+    
 </body>
 </html>
